added readme file and updated html for form submission functionality

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         </div>
         </header> 
     <main class="main-content">
-        <form>
+        <form name="log-in" netlify>
             <div class="form-group">
                 <label for="name">Username</label><sup style="font-size: 50%;"><i class="fa-solid fa-asterisk"></i></sup>
                 <input type="text" id="name" name="name" required> 
